include identity server in health checks

--- a/src/WebUI/src/app/system-status-component/system-status-component.component.html
+++ b/src/WebUI/src/app/system-status-component/system-status-component.component.html
@@ -5,6 +5,7 @@
 <button (click)="doStatusCheck()">Check Status</button>
 
 <ul>
+  <li>Identity Status: {{identityServiceStatus}}</li>
   <li>Profile Status: {{profileServiceStatus}}</li>
   <li>Project Status: {{projectServiceStatus}}</li>
 </ul>
